--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==2.2
 django-extensions==2.1.6
 honcho==1.0.1
 pkg-resources==0.0.0
+psycopg2-binary==2.8.2
 pytz==2019.1
 six==1.12.0
 sqlparse==0.3.0
