Add POSTGRES related env vars and settings

--- a/.env.dist
+++ b/.env.dist
@@ -1,1 +1,6 @@
 SECRET_KEY='1$ami%g1hv+x03nx9qb+_!^fmg(mhek__#f76#l@^*7ox9-638'
+POSTGRES_NAME='portfolio'
+POSTGRES_USER='portfolio'
+POSTGRES_PASSWORD='portfolio'
+POSTGRES_HOST='localhost'
+POSTGRES_PORT='5432'
