Add gunicorn related env vars to .env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,6 @@ POSTGRES_USER='portfolio'
 POSTGRES_PASSWORD='portfolio'
 POSTGRES_HOST='localhost'
 POSTGRES_PORT='5432'
+PORT='8000'
+WORKERS=8
+TIMEOUT=90
