--- a/.env.dist
+++ b/.env.dist
@@ -7,3 +7,6 @@ POSTGRES_PORT='5432'
 PORT='8000'
 WORKERS=8
 TIMEOUT=90
+AUTH0_CLIENT_ID=''
+AUTH0_CLIENT_SECRET=''
+AUTH0_CLIENT_SECRET_BASE64_ENCODED='False'
