--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 Django==2.2
 django-extensions==2.1.6
 djangorestframework==3.9.2
+djangorestframework-jwt==1.11.0
 gunicorn==19.9.0
 honcho==1.0.1
 pkg-resources==0.0.0
 psycopg2-binary==2.8.2
+PyJWT==1.7.1
 pytz==2019.1
 rest-framework-apicontrol==0.7.7
+rest-framework-auth0==0.5.0
 six==1.12.0
 sqlparse==0.3.0
