--- a/.env.dist
+++ b/.env.dist
@@ -12,3 +12,5 @@ AUTH0_CLIENT_SECRET=''
 AUTH0_CLIENT_SECRET_BASE64_ENCODED='False'
 APP_HOST='localhost'
 DEBUG='True'
+DEFAULT_ADMIN_USER='admin'
+DEFAULT_ADMIN_PASSWORD='pa55w04d'
