--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==2.2
 django-extensions==2.1.6
+django-storages==1.7.1
 djangorestframework==3.9.2
 djangorestframework-jwt==1.11.0
 gunicorn==19.9.0
