--- a/.env.dist
+++ b/.env.dist
@@ -14,3 +14,10 @@ APP_HOST='localhost'
 DEBUG='True'
 DEFAULT_ADMIN_USER='admin'
 DEFAULT_ADMIN_PASSWORD='pa55w04d'
+DO_SPACES_ACCESS_KEY_ID=''
+DO_SPACES_SECRET_ACCESS_KEY=''
+DO_SPACES_SPACE_NAME=''
+DO_SPACES_SPACE_FOLDER='portfolio-backend'
+DO_SPACES_ENDPOINT_URL=''
+DO_SPACES_CACHE_MAX_AGE=86400
+DO_SPACES_DEFAULT_ACL=None
