--- a/.env.dist
+++ b/.env.dist
@@ -11,6 +11,7 @@ AUTH0_CLIENT_ID=''
 AUTH0_CLIENT_SECRET=''
 AUTH0_CLIENT_SECRET_BASE64_ENCODED='False'
 APP_HOST='localhost'
+WEBSITE_PROTOCOL='http'
 WEBSITE_HOST='127.0.0.1'
 WEBSITE_PORT='8080'
 CORS_ORIGIN_ALLOW_ALL=False
