Update requirements.txt file to django3 version packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
-python-dotenv==0.15.0
-boto3==1.9.145
-Django==2.2.13
-django-cors-headers==3.0.0
+asgiref==3.3.1
+boto3==1.16.25
+botocore==1.19.25
+Django==3.1.3
+django-cors-headers==3.5.0
 django-extensions==3.1.0
-git+https://github.com/mcueto/django-storages
-django-filter==2.1.0
-djangorestframework==3.9.2
+django-filter==2.4.0
+django-storages @ git+https://github.com/mcueto/django-storages@a5098abfe54908fcabff484e3cbb4d9c2fada53f
+djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
+docutils==0.15.2
 gunicorn==19.9.0
 honcho==1.0.1
+jmespath==0.10.0
 Pillow==7.1.0
 psycopg2-binary==2.8.2
 PyJWT==1.7.1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
 pytz==2020.4
 rest-framework-apicontrol==0.7.7
 rest-framework-auth0==0.5.3
-six==1.12.0
-sqlparse==0.3.0
-whitenoise==4.1.2
+s3transfer==0.3.3
+six==1.15.0
+sqlparse==0.4.1
+urllib3==1.25.11
+whitenoise==5.2.0
