--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Django==3.1.3
 django-cors-headers==3.5.0
 django-extensions==3.1.0
 django-filter==2.4.0
-django-storages @ git+https://github.com/mcueto/django-storages@a5098abfe54908fcabff484e3cbb4d9c2fada53f
+django-storages @ git+https://github.com/mcueto/django-storages
 djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
 docutils==0.15.2
