Fix dependency for DigitalOcean space backend

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ Django==3.1.3
 django-cors-headers==3.5.0
 django-extensions==3.1.0
 django-filter==2.4.0
-django-storages @ git+https://github.com/mcueto/django-storages
+django-storages==1.10.1
+django-storages-dospaces==0.1.1
 djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
 docutils==0.15.2
